[project]
name = "my_langgraph_project"
version = "0.0.1"
description = "A project utilizing LangGraph and LangChain libraries"
authors = [
    { name = "taomeilong", email = "779572772@qq.com" }
]
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1","ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent","agent"]

[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "B", "I", "Q000"]
ignore = ["E501", "W503"]
exclude = ["build", "dist", ".venv"]
